Added comments and cleaned gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,9 @@
-
+# File extensions
 *.json
 
+# Directories
 **/node_modules
 node_modules/
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
 /node_modules
